Alignment fix for values detail view

--- a/ui/less/styles.less
+++ b/ui/less/styles.less
@@ -260,10 +260,11 @@ body.value-detail-view {
 article#value {
     #related-list {
         .module-list-item {
-            width: 198px;
             height: 198px;
             color: white;
-            border: 1px solid @gray;
+            width: 33.3%;
+            border-right: 2px solid white;
+            border-bottom: 2px solid white;
         }
         .caption {
             width: 100%;
@@ -309,7 +310,7 @@ article#value {
     }
     section
     #summary {
-        padding-right: 20px;
+        padding-right: 100px;
     }
     #button-bar {
         button {
